<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codelab.hasyim.spkapp.InputData">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="Prediksi"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        />
</LinearLayout>


    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mainLinear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Id Toko" />

                <EditText
                    android:id="@+id/edt_id_toko"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Alamat" />

                <EditText
                    android:id="@+id/edt_alamat_toko"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Sales Mr.Bread" />

                        <RadioGroup
                            android:id="@+id/rg_smBread"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radio_smBread_ya"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/radio_sm_ya" />

                            <RadioButton
                                android:id="@+id/radio_smBread_tidak"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_sm_tidak" />

                        </RadioGroup>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Sales Mr.Bread" />

                        <RadioGroup
                            android:id="@+id/rg_sSari"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radio_ssari_ya"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/radio_ss_ya" />

                            <RadioButton
                                android:id="@+id/radio_ssari_tidak"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_ss_tidak" />

                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="luas lokasi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="space minimum 4x3 m" />

                        <RadioGroup
                            android:id="@+id/rg_luasLokasi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radio_lokasiAda"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/radio_luas_ada" />

                            <RadioButton
                                android:id="@+id/radio_lokasiTidakAda"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_luas_tidak" />

                        </RadioGroup>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Besar Daya (4500w)" />

                        <RadioGroup
                            android:id="@+id/rg_besarDaya"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radio_bd_sanggup"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/radio_bd_sanggup" />

                            <RadioButton
                                android:id="@+id/radio_bd_tidak"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_bd_tidak" />

                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Induk Listrik" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="12dp"
                            android:text=" Apakah induk listrik bisa di pecah(saat penambahan daya)" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="12dp"
                            android:text="*Kebijakan Dari PLN"
                            android:textColor="#000000" />

                        <RadioGroup
                            android:id="@+id/rg_induk_listrik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radio_induk_bisa"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/radio_il_bisa" />

                            <RadioButton
                                android:id="@+id/radio_induk_tidak"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_il_tidak" />

                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Kompetitor" />

                        <RadioGroup
                            android:id="@+id/rg_kompetitor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radio_k_banyak"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/radio_k_banyak" />

                            <RadioButton
                                android:id="@+id/radio_k_sedikit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_k_tidak_ada" />

                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Akses Lokasi" />

                        <RadioGroup
                            android:id="@+id/rg_akses_lokasi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radio_al_mudah"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/radio_al_mudah" />

                            <RadioButton
                                android:id="@+id/radio_al_sulit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_al_sulit" />

                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Target Konsumen" />

                        <RadioGroup
                            android:id="@+id/rg_target_konsumen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radio_target_besar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_radio_target_besar" />

                            <RadioButton
                                android:id="@+id/radio_target_kecil"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_radio_target_kecil" />

                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Daya Tarik Konsumen" />

                        <RadioGroup
                            android:id="@+id/rg_dayatarik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radio_dt_tertarik"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/radio_dt_tertarik" />

                            <RadioButton
                                android:id="@+id/radio_dt_tidak_tertarik"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_dt_tidak_tertarik" />

                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Izin Dinas Kesehatan" />

                        <RadioGroup
                            android:id="@+id/rg_izin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radio_izin_disetujui"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/radio_izin_disetujui" />

                            <RadioButton
                                android:id="@+id/radio_izin_tidak"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/radio_izin_tidak" />

                        </RadioGroup>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabPrediksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_send"
        app:layout_anchor="@id/mainLinear"
        app:layout_anchorGravity="bottom|end"
        />

</android.support.design.widget.CoordinatorLayout>